# stoveiq-open

./: .gitignore  CLAUDE.md  LICENSE-HARDWARE  LICENSE-SOFTWARE  README.md
.github/workflows/: ci.yml
docs/: enclosure-build.md  hackaday-project-page.md  phase1-cookware-teaching.md
enclosure/: stoveiq_enclosure_v1_production.scad
firmware/: Makefile  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/emulator/: thermal_emulator.c  thermal_emulator.h
firmware/emulator/scenarios/: all_burners.c  false_positive_sun.c  oven_interference.c  scenarios.h  single_burner_30min.c
firmware/include/: stoveiq_types.h
firmware/lib/MLX90640/: CMakeLists.txt  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h
firmware/src/: CMakeLists.txt  ble_provision.c  ble_provision.h  cooking_engine.c  cooking_engine.h  main.c  sensor.c  sensor.h  silent_mp4.h  tasks.c  tasks.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
firmware/src/certs/: README.md
firmware/test/: test_cooking_engine.c  test_integration.c  test_sensor.c
hardware/enclosure/: stoveiq_pvc_enclosure.FCMacro  stoveiq_pvc_enclosure.scad
recipes/: PULL_REQUEST_TEMPLATE.md  README.md  schema.json
recipes/basics/: boiled-potatoes.json  fried-eggs.json  pasta.json  white-rice.json
recipes/proteins/: seared-steak.json
recipes/vegetables/: caramelized-onions.json
scripts/: gen-cert.sh
